{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "c74f3a62-79ca-4394-89d7-6784f07b52d3",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "b2674772-af22-4a6f-844a-93761e9ae3b7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "93ba0af2-0a42-4c36-86a6-8dc8e48fe4f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "4bdaa004-de47-4c79-ac03-8af37a66ff88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4425f9cc-5b80-4684-83a4-d7a6bf3347e8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "65ff9814-e387-43c1-964c-46ddabbf122a",
                    "path": "<Touchscreen>/touch2/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f32890a7-1659-4147-b030-7dc1bcb92e41",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7aef93f-36b7-4aef-9ea8-5b45c7b2648b",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09d95268-4a0d-4557-84cb-fcc711668783",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}